assets/scss/partials/_footer.scss
.footer {
    background: $blue-2;
    padding: 85px 0 30px 0;
    font-weight: $semi-bold;
    font-family: $primary-font;

    // For IE 11 (media is a hack to check for IE 10+)
    @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
        overflow: hidden;
    }

    .footer-head {

        @include breakpoint(medium down){
            padding-left: 8.33%;
            padding-right: 8.33%;
        }

        @include breakpoint(small only){
            display: grid;
            justify-items: center;
            justify-content: unset;
        }

        .logo{
            @include breakpoint(small only){
                width: 100%;
            }
        }

        .undp-logo {
            width: 60px;
            margin-right: 25px;

            @include breakpoint(medium down){
                width: 55px;
            }
        }

        .footer-subtitle{
            text-align: right;

            @include breakpoint(small only){
                text-align: left;
            }
        }

        .sign-up{
            @include breakpoint(small only){
                width: 100%;
                margin-top: 45px;
            }
        }

        .group-input-sign-up {
            margin-top: 15px;

            .input-sign-up {
                height: 30px;
                color: $white;
                min-width: 185px;
                border-radius: 0;
                padding: 8px 14px;
                font-size: 1.4rem;
                border: 1px solid $white;
                background-color: $blue-2;

                @include breakpoint(small only){
                    width: 100%;
                    height: 46px;
                    padding: 16px;
                }

                &::placeholder {
                    font-size: 1.4rem;
                    color: rgba($white, 0.43);
                }
            }

            .btn-submit {
                border: none;
                color: $blue-2;
                border-radius: 0;
                font-size: 1.4rem;
                padding: 5px 15px 0;
                background-color: $white;
                text-transform: uppercase;
            }
        }
    }

    .footer-body {
        margin-top: 40px;
        padding-top: 50px;
        border-top: 2px solid $white;

        @include breakpoint(medium down){
            padding-left: 8.33%;
            padding-right: 8.33%;
        }

        @include breakpoint(small only){
            display: grid;
            padding-top: 40px;
        }

        .column {
            @include breakpoint(small only){
                &:not(:first-child){
                    margin-top: 40px;
                }
            }

            .list {
                padding: 0;
                margin-top: 25px;
                list-style: none;

                @include breakpoint(small only){
                    display: none;
                }

                li:not(:first-child) {
                    margin-top: 15px;
                }
            }

            .icons-search .icon:first-child {
                margin-right: 22px;

                @include breakpoint(small only){
                    margin-right: 27px;
                }
            }

            &:first-child {
                max-width: 118px;

                @include breakpoint(small only){
                    max-width: unset;
                }
            }

            &:nth-child(2) {
                max-width: 160px;

                @include breakpoint(small only){
                    max-width: unset;
                }
            }

            &:nth-child(3) {
                max-width: 85px;

                @include breakpoint(small only){
                    max-width: unset;
                }
            }

            &:nth-child(4) {
                max-width: 145px;

                @include breakpoint(small only){
                    max-width: unset;
                }
            }

            &:nth-child(5) {
                max-width: 80px;

                @include breakpoint(small only){
                    max-width: unset;
                }
            }
        }

        .terms-conditions {
            margin-top: 50px;
            text-align: right;

            @include breakpoint(medium down){
                margin-top: 0;

                .list{
                    margin-top: 0;
                    padding-left: 0;
                    list-style: none;

                    li:not(:first-child) {
                        margin-top: 15px;
                    }
                }
            }

            @include breakpoint(small only){
                margin-top: 10px;
                text-align: left;

                .list{
                    display: block;
                }
            }
        }



        .legal {
            text-align: right;

            .social-links {
                margin-top: 35px;

                @include breakpoint(small only){
                    margin-top: 50px;
                }

                .social-link {
                    width: 25px;
                }

                .social-link:not(:last-child) {
                    margin-right: 35px;

                    @include breakpoint(360px down){
                        margin-right: 25px;
                    }
                }

                .icon {
                    width: 25px;
                    height: 25px;
                    background-size: cover;

                    &:not(:last-child) {
                        margin-right: 15px;
                    }
                }
            }

            svg {
                fill: $white;
            }
        }
    }

    .light {
        color: $white;
    }

    .footer-title {
        font-size: 2.3rem;
        font-weight: $semi-bold;
        text-transform: capitalize;

        @include breakpoint(medium down){
            font-size: 2.1rem;
        }
    }

    .footer-subtitle {
        line-height: 1.7;
        font-size: 1.3rem;
        font-weight: $semi-bold;

        @include breakpoint(small only){
            display: flex;
            line-height: 1.1;
            font-size: 1.4rem;
        }

        .footer-subtitle-arrow{
            display: none;

            @include breakpoint(small only){
                display: unset;
                margin-left: 20px;
            }

            &.rotate{
                margin-top: -2px;
                transform: scaleY(-1);
            }
        }
    }

    .footer-menu-item {
        line-height: 1.2;
        font-size: 1.4rem;
        font-weight: $regular;
        text-transform: capitalize;

        &.light {

            &:hover {
                color: rgba($white, 0.7);
            }
        }

        &:active,
        &.active {
            padding-bottom: 3px;
            border-bottom: 1px solid $white;
        }
    }

    .footer-foot {
        margin-top: 80px;

        @include breakpoint(medium down){
            margin-top: 50px;
        }
    }
}

